[gd_scene load_steps=6 format=3 uid="uid://cajyqv18vt7kn"]

[ext_resource type="Texture2D" uid="uid://clp8vebvs2xl2" path="res://assets/icons/movement.png" id="1_anaim"]
[ext_resource type="Script" path="res://levels/ui/ability_button/ability_button.gd" id="2_vwb05"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xsvl0"]
bg_color = Color(0.490196, 0.490196, 0.490196, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yv51w"]
bg_color = Color(0, 0, 0, 0.34902)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.584314, 0.47451, 0, 1)
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mayg0"]
bg_color = Color(0.490196, 0.490196, 0.490196, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0.501961, 0.501961, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0
anti_aliasing = false

[node name="Ability_Button" type="TextureButton"]
offset_left = 4.0
offset_top = 4.0
offset_right = 54.0
offset_bottom = 54.0
mouse_filter = 1
texture_normal = ExtResource("1_anaim")
script = ExtResource("2_vwb05")

[node name="Normal" type="Panel" parent="."]
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_xsvl0")

[node name="Pressed" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_yv51w")

[node name="Hovered" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 50.0
offset_bottom = 50.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_mayg0")

[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
